# django-watermark

./: .gitignore  .hgtags  .landscape.yaml  CHANGELOG  CHANGES  LICENSE  MANIFEST.in  PYPIREADME.rst  README  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
example/: README.rst  initial_data.json  requirements.txt  settings.py  urls.py
example/media/: .gitignore
example/templates/: index.html
watermarker/: __init__.py  admin.py  conf.py  models.py  utils.py
watermarker/locale/ru/LC_MESSAGES/: django.mo  django.po
watermarker/migrations/: 0001_initial.py  0002_auto_20210320_2145.py
watermarker/south_migrations/: 0001_initial.py
watermarker/templatetags/: watermark.py
watermarker/tests/: conftest.py  settings.py  test_utils.py
